[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Boss1/boss1_shield.tscn" type="PackedScene" id=1]
[ext_resource path="res://Atta_Detect/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Boss1/Boss1Lazer.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 396.0

[sub_resource type="CapsuleShape2D" id=2]
height = 396.0

[node name="Boss1Lazer" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 2147483648
script = ExtResource( 3 )

[node name="effect" type="Node2D" parent="."]
modulate = Color( 0, 1, 0.486275, 1 )
position = Vector2( 0, -24 )
scale = Vector2( 1, 2 )

[node name="boss1_shield" parent="effect" instance=ExtResource( 1 )]
position = Vector2( 0, -72 )
scale = Vector2( 1, 20 )
is_decorative = true

[node name="boss1_shield2" parent="effect" instance=ExtResource( 1 )]
position = Vector2( 0, -64 )
scale = Vector2( 1, 20 )
is_decorative = true

[node name="boss1_shield3" parent="effect" instance=ExtResource( 1 )]
position = Vector2( 0, -104 )
scale = Vector2( 1, 20 )
is_decorative = true

[node name="boss1_shield4" parent="effect" instance=ExtResource( 1 )]
position = Vector2( 0, -144 )
scale = Vector2( 1, 20 )
is_decorative = true

[node name="boss1_shield5" parent="effect" instance=ExtResource( 1 )]
position = Vector2( 0, -184 )
scale = Vector2( 1, 20 )
is_decorative = true

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -208 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -208 )
shape = SubResource( 2 )

[node name="self_destroy" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="self_destroy" to="." method="_on_self_destroy_timeout"]

[editable path="Hitbox"]
